# sqlchecker

./: .gitignore  Makefile  pyproject.toml  requirements.txt  test_detector.py
datasets/catalogs/: gen1.json  unicorsi.json
datasets/sql/: gen1.sql  unicorsi.sql
src/sqlcheck/: __init__.py
tests/: __init__.py
tests/1_syn/: test_001_ambiguous_column.py  test_002_ambiguous_column.py  test_003_undefined_column.py  test_004_undefined_column.py  test_005_undefined_function.py  test_005_undefined_parameter.py  test_006_undefined_object.py  test_006_undefined_parameter.py  test_007_invalid_schema_names.py  test_007_undefined_object.py  test_009_misspellings.py  test_012_is_where_not_applicable.py  test_013_data_type_mismatch.py  test_014_aggregate_function_outside_select_or_having.py  test_015_nested_aggregate_functions.py  test_016_extraneous_omitted_grouping_column.py  test_017_having_without_group_by.py  test_018_too_many_columns_in_subquery.py  test_019_using_where_twice.py  test_020_omitted_from.py  test_022_038_additional_omitted_semicolons.py  test_024_comparison_with_null.py  test_024_duplicate_clause.py  test_026_duplicate_clause.py  test_026_too_many_columns_in_subquery.py  test_030_keywords_order.py  test_037_nonstandard_operators.py  test_107_108_curly_square_or_unmatched_brackets.py
tests/2_sem/: test_038_tautological_inconsistent_expressions.py  test_041_distinct_sum_avg.py  test_050_constant_column_output.py  test_051_duplicate_column_output.py
tests/3_log/: test_043_wildcards_without_like.py  test_058_incorrect_table_reference.py  (+13 more)
(+18 files in other folders)
