[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlchecker"
version = "0.3.1"
authors = [
  { name="Davide Ponzini", email="davide.ponzini95@gmail.com" },
]
description = "This project analyses SQL statements and labels possible errors or complications."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2",
    "pyyaml",
    "sqlparse",
    "sqlglot",
    "sqlscope>=1.0.16",
    "sqlerrors>=2.0.0",
    "z3-solver",
    "python-dateutil",
]

[project.urls]
"Repository" = "https://github.com/DavidePonzini/sqlchecker"
"Documentation" = "https://sqlchecker.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/DavidePonzini/sqlchecker/issues"
